apps/demo-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    istio.io/dataplane-mode: ambient
    tier: application
